Styling changes to the landing page (spacing and alignment, new button images); fix to navigation

--- a/src/components/navigation/Header/Header.styles.css
+++ b/src/components/navigation/Header/Header.styles.css
@@ -1,16 +1,17 @@
 .header-block {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-bottom: 3vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 2vh;
+  margin-bottom: 3vh;
 }
 
 .logo {
-    width: 20%;
-    margin: auto;
+  width: 20%;
+  margin: auto;
 }
 
 .separator {
-    height: 40px;
-    margin: 10px auto 0px auto;
+  height: 40px;
+  margin: 10px auto 0px auto;
 }
